Added some error handling, some of which is still unfinished (Check TODO tags in source), and did more refactoring